@@ -18,21 +18,29 @@
 
     <dependencies>
 
-        <!--<editor-fold desc="Mongo DB">-->
+        <!--<editor-fold desc="MongoDB">-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <!--</editor-fold>-->
 
-        <!--<editor-fold desc="Web Development and Auto Configuration">-->
+        <!--<editor-fold desc="MongoDB Testing">-->
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--</editor-fold>-->
+
+        <!--<editor-fold desc="Spring MVC, REST and Tomcat">-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--</editor-fold>-->
 
-        <!--<editor-fold desc="Reduce Boilerplate Code (Getters & Setters, etc.)">-->
+        <!--<editor-fold desc="Lombok">-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -40,25 +48,71 @@
         </dependency>
         <!--</editor-fold>-->
 
-        <!--<editor-fold desc="Tests">-->
+        <!--<editor-fold desc="Testing">-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+
+            <!-- exclude junit 4 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+
         </dependency>
         <!--</editor-fold>-->
 
-        <!--<editor-fold desc="File hosting">-->
+        <!--<editor-fold desc="Mockito Testing">-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!--</editor-fold>-->
+
+        <!--<editor-fold desc="JUnit 5">-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--</editor-fold>-->
+
+        <!--<editor-fold desc="H2 Database Testing">-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--</editor-fold>-->
+
+        <!--<editor-fold desc="AWS3">-->
         <dependency>
             <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-aws-context</artifactId>
-            <version>2.3.2</version>
+            <version>2.4.1</version>
         </dependency>
 
         <dependency>
             <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-aws-autoconfigure</artifactId>
-            <version>2.3.2</version>
+            <version>2.4.1</version>
         </dependency>
         <!--</editor-fold>-->
 
@@ -66,22 +120,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <version>2.5.6</version>
         </dependency>
-        <!--</editor-fold>-->
-
-        <!--<editor-fold desc="Auto Mail Service">-->
-        <!-- Template Engine -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.6.1</version>
-        </dependency>
-
-        <!-- Auto Mail Service -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
         <!--</editor-fold>-->
 
@@ -97,12 +141,18 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
                 <version>2.22.2</version>
             </plugin>
 
@@ -112,7 +162,7 @@
                 <configuration>
                     <excludes>
                         <exclude>
-                            <groupId>org.projectlombok</groupId>
+                            <groupId>org.project-lombok</groupId>
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
